--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-baseurl: /cs228-notes
-title: Probabilistic graphical modeling course
-subtitle: Lecture notes for Stanford cs228.
-author: Volodymyr Kuleshov
+baseurl: /
+title: Nicholas Hoffs' Blog
+subtitle: My personal projects
+author: Nicholas Hoffs
 simple_search: http://google.com/search
-description: Lecture notes for Stanford cs228.
-name: cs228-notes
+description: Personal projects
+name: nicholas-hoffs-blog
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 permalink: /articles/:short_year/:title
-timezone: America/New_York
+timezone: America/Los_Angeles
 excerpt_separator: <!--more-->  # you can specify your own separator, of course.
 exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md']
 post:
