Fixing Latex and working on stylesheets

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Personal projects
 name: nicholas-hoffs-blog
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 permalink: /articles/:short_year/:title
-timezone: America/Los_Angeles
+#timezone: America/Los_Angeles
 excerpt_separator: <!--more-->  # you can specify your own separator, of course.
 exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md']
 post:
